--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.10.1",
+    "client-session": "^0.1.7",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~0.7.4",
     "ejs": "^1.0.0",
     "express": "~4.11.0",
+    "express-session": "^1.10.2",
+    "googleapis": "^1.1.2",
     "jade": "~1.9.0",
     "lodash": "^3.0.0",
     "mongodb": " *",
     "mongoose": "^3.8.22",
     "monk": "*",
     "morgan": "~1.5.1",
+    "mysql": "^2.5.4",
+    "node-gyp": "^1.0.2",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-google-oauth": "^0.1.5",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "~1.0.2",
     "request": "^2.53.0",
     "serve-favicon": "~2.2.0",
-    "socket.io": "latest",
-    "client-session": "^0.1.7",
-    "node-gyp": "^1.0.2"
+    "socket.io": "latest"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
