--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "googleapis": "^1.1.2",
     "jade": "~1.9.0",
     "lodash": "^3.0.0",
+    "orchestrate": "^0.3.11",
+    "method-override": "^2.2.0",
     "mongodb": " *",
     "mongoose": "^3.8.22",
     "monk": "*",
@@ -32,8 +34,9 @@
     "passport-twitter": "~1.0.2",
     "request": "^2.53.0",
     "serve-favicon": "~2.2.0",
-    "socket.io": "latest"
-  },
+    "socket.io": "latest",
+    "q": "^1.0.1"
+ },
   "devDependencies": {
     "grunt": "^0.4.5"
   }
