updates - removed extra codes for IP checking. Continuing to add Timezone Features

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "orchestrate": "^0.3.11",
     "method-override": "^2.2.0",
     "mongodb": " *",
-    "mongoose": "^3.8.22",
+    "mongoose": "3.8",
     "monk": "*",
     "morgan": "~1.5.1",
     "mysql": "^2.5.4",
