--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "googleapis": "^1.1.2",
     "jade": "~1.9.0",
     "lodash": "^3.0.0",
-    "orchestrate": "^0.3.11",
     "method-override": "^2.2.0",
     "mongodb": " *",
     "mongoose": "3.8",
@@ -27,16 +26,18 @@
     "morgan": "~1.5.1",
     "mysql": "^2.5.4",
     "node-gyp": "^1.0.2",
+    "orchestrate": "^0.3.11",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "^0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
+    "q": "^1.0.1",
     "request": "^2.53.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "latest",
-    "q": "^1.0.1"
- },
+    "timezone": "0.0.39"
+  },
   "devDependencies": {
     "grunt": "^0.4.5"
   }
