--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.5.1",
     "mysql": "^2.5.4",
     "node-gyp": "^1.0.2",
+    "nodemailer": "^1.3.0",
     "orchestrate": "^0.3.11",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
@@ -39,6 +40,7 @@
     "timezone": "0.0.39"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.0"
   }
 }
