--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "cookie-parser": "~1.3.3",
     "debug": "~0.7.4",
     "ejs": "^1.0.0",
-    "express": "~4.11.0",
+    "express": "^4.11.2",
     "express-session": "^1.10.2",
     "googleapis": "^1.1.2",
     "jade": "^1.11.0",
     "lodash": "^3.0.0",
     "method-override": "^2.2.0",
-    "mongodb": " *",
+    "mongodb": "^1.4.40",
     "mongoose": "3.8",
     "monk": "*",
     "morgan": "~1.5.1",
@@ -43,10 +43,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.11.0"
-  }, 
-  "engines" : 
-  { 
-    "node" : ">=0.10.3 <0.12"  
+  },
+  "engines": {
+    "node": ">=0.10.3 <0.12"
   }
-
 }
